--- a/exercises/testes-automatizados-com-jest_3/package.json
+++ b/exercises/testes-automatizados-com-jest_3/package.json
@@ -5,5 +5,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.1"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
